--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_riverpod: ^0.11.0
   sqflite: ^1.3.2+1
+  flutter_local_notifications: ^4.0.0
+  rxdart: ^0.25.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,8 +37,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.1
   mockito: ^4.1.4
 
+flutter_icons:
+  andriod: "images/appstore.png"
+  ios: false
+  image_path: "images/appstore.png"
+  image_path_andriod: "images/appstore.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "images/appstore.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
