--- a/.github/workflows/usingAction.yml
+++ b/.github/workflows/usingAction.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           who-to-greet: kenechukwu
       - name: output-action
-        run: echo '${{steps.iniAction.output.time}}'
+        run: echo "${{steps.iniAction.output.time}}"
     
     
