--- a/.github/workflows/usingAction.yml
+++ b/.github/workflows/usingAction.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   greeting-action:
     runs-on: ubuntu-latest
+
+    
     steps:
       - name: initial-action
         id: iniAction
@@ -10,6 +12,7 @@ jobs:
         with:
           who-to-greet: kenechukwu
       - name: output-action
-        run: echo "${{steps.iniAction.output.time}}"
+    
+        run: echo "${{steps.iniAction.outputs.time}}"
     
     
