--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
           git config --global user.email 'triggac4@gmail.com'
           git config --global user.name 'triggac4'
           git fetch
-          git checkout master
-          git branch --set-upstream-to=origin/master
+          git checkout main
+          git branch --set-upstream-to=origin/main
           git pull
           ls -a
           echo $random >> random.txt
