--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
           git config --global user.email 'triggac4@gmail.com'
           git config --global user.name 'triggac4'
           git fetch
-          git checkout -b main
+          git checkout -m main
           git branch --set-upstream origin main
           ls -a
           echo $random >> random.txt
