--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
           git config --global user.name 'triggac4'
           git fetch
           git checkout -m main
-          git branch --set-upstream origin main
+          git branch --set-upstream-to=origin main
+          git pull
           ls -a
           echo $random >> random.txt
           ls -a
