--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,20 +8,20 @@ jobs:
         run: |
           pwd
           ls -a
-          git init
-          git remote add origin "https://$GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email 'triggac4@gmail.com'
-          git config --global user.name 'triggac4'
-          git fetch
-          git checkout main
-          git branch --set-upstream-to=origin main
-          git pull
-          ls -a
-          echo $random >> random.txt
-          ls -a
-          git add .
-          git commit -m 'from bot'
-          git push -u
+#          git init
+#          git remote add origin "https://$GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}@github.com/$GITHUB_REPOSITORY.git"
+#          git config --global user.email 'triggac4@gmail.com'
+#          git config --global user.name 'triggac4'
+#          git fetch
+#          git checkout main
+#          git branch --set-upstream-to=origin main
+#          git pull
+#          ls -a
+#          echo $random >> random.txt
+#          ls -a
+#          git add .
+#          git commit -m 'from bot'
+#          git push
       - name: node version
         run: |
           node -v
