--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,35 +18,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
-  google_fonts: ^1.1.0
-  flutter_riverpod: ^0.11.0
-  sqflite: ^1.3.2+1
-  flutter_local_notifications: ^4.0.0
-  rxdart: ^0.25.0
+  intl: ^0.17.0
+  google_fonts: ^2.0.0
+  flutter_riverpod: ^0.13.0-nullsafety.3
+  sqflite: ^2.0.0+1
+  flutter_local_notifications: ^5.0.0-nullsafety.0
+  rxdart: ^0.26.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
-  mockito: ^4.1.4
-
-flutter_icons:
-  andriod: "images/appstore.png"
-  ios: false
-  image_path: "images/appstore.png"
-  image_path_andriod: "images/appstore.png"
-  adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "images/appstore.png"
+  flutter_launcher_icons: ^0.9.0
+  mocktail: ^0.0.2-dev.5
+  animated_splash_screen: ^1.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,6 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/appstore.jpg
     - images/calendar-pngrepo-com.png
     - images/no-schedule-no-schedule-png-194_181.png
   #   - images/a_dot_ham.jpeg
